# BiciMad

./: README.md  bicimad-1.0.0-py3-none-any.whl  bicimad.ipynb  pyproject.toml
bicimad/: __init__.py  bicimad.py  urlemt.py
tests/: test_bicimad.py  test_urlemt.py
