[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bicimad"
version = "1.0.0"
description = "A Python package to retrieve, clean and analyze BiciMAD trip data from EMT Madrid's open data portal."
authors = [{ name = "Óscar Rico Rodríguez" }]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "*.ipynb", ".venv*", "dist*", ".pytest_cache*", "enunciado.html"]